{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 680,
  "lineage": "e573c8dd-be7a-3807-0fa2-32bb795c34ac",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-e7ad712a",
            "domain": "vpc",
            "id": "eipalloc-06ccaf30370710741",
            "network_interface": "eni-0aa044c8bd9c0275d",
            "private_dns": "ip-10-0-0-148.eu-west-2.compute.internal",
            "private_ip": "10.0.0.148",
            "public_dns": "ec2-3-11-201-234.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.11.201.234",
            "public_ipv4_pool": "amazon",
            "tags": {
              "application": "volume-mount-test"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-dfcb3205",
            "domain": "vpc",
            "id": "eipalloc-0ed252c8dc1a0a85c",
            "network_interface": "eni-0465ce95f15fa7d64",
            "private_dns": "ip-10-0-1-93.eu-west-2.compute.internal",
            "private_ip": "10.0.1.93",
            "public_dns": "ec2-35-179-85-46.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.179.85.46",
            "public_ipv4_pool": "amazon",
            "tags": {
              "application": "volume-mount-test"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-ccf32530",
            "domain": "vpc",
            "id": "eipalloc-0528a669e99ad116a",
            "network_interface": "eni-05c6d4b9f19404bc0",
            "private_dns": "ip-10-0-2-87.eu-west-2.compute.internal",
            "private_ip": "10.0.2.87",
            "public_dns": "ec2-3-9-137-113.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.9.137.113",
            "public_ipv4_pool": "amazon",
            "tags": {
              "application": "volume-mount-test"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "volume-mount-test",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed2df11a6d41ea78",
            "arn": "arn:aws:ec2:eu-west-2:626298535712:instance/i-0295703482eba815e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "volume-mount-test",
            "id": "i-0295703482eba815e",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02d74e22f405f4051",
            "private_dns": "ip-10-0-3-8.eu-west-2.compute.internal",
            "private_ip": "10.0.3.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03775974fde2a17f2",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3994eded865fe56",
            "tags": {
              "Name": "volume-mount-test-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07b9f2237c99ecedd"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.volume-mount-test",
            "aws_security_group.volume-mount-test",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed2df11a6d41ea78",
            "arn": "arn:aws:ec2:eu-west-2:626298535712:instance/i-05a4a8dbf6a984014",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "volume-mount-test",
            "id": "i-05a4a8dbf6a984014",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-081742410ce61df99",
            "private_dns": "ip-10-0-4-72.eu-west-2.compute.internal",
            "private_ip": "10.0.4.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08775e470f3d1ab4d",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0442670e404403389",
            "tags": {
              "Name": "volume-mount-test-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07b9f2237c99ecedd"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.volume-mount-test",
            "aws_security_group.volume-mount-test",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed2df11a6d41ea78",
            "arn": "arn:aws:ec2:eu-west-2:626298535712:instance/i-0efd889b4aaedd891",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "volume-mount-test",
            "id": "i-0efd889b4aaedd891",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b1d495774ed22135",
            "private_dns": "ip-10-0-5-208.eu-west-2.compute.internal",
            "private_ip": "10.0.5.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02ce999e3699132a7",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04195ce238c33b7d5",
            "tags": {
              "Name": "volume-mount-test-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07b9f2237c99ecedd"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.volume-mount-test",
            "aws_security_group.volume-mount-test",
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ba57caf6056abf07",
            "owner_id": "626298535712",
            "tags": {
              "Name": "VOLUME-MOUNT-TEST-IGW",
              "application": "volume-mount-test"
            },
            "vpc_id": "vpc-0ca2a1fffca7c4321"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06ccaf30370710741",
            "id": "nat-0b10b069494ecfd4b",
            "network_interface_id": "eni-0aa044c8bd9c0275d",
            "private_ip": "10.0.0.148",
            "public_ip": "3.11.201.234",
            "subnet_id": "subnet-008fd7e5aa3735cc9",
            "tags": {
              "Name": "VOLUME-MOUNT-TEST-AZ1",
              "application": "volume-mount-test"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nateip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed252c8dc1a0a85c",
            "id": "nat-00920f8c8bdb0085c",
            "network_interface_id": "eni-0465ce95f15fa7d64",
            "private_ip": "10.0.1.93",
            "public_ip": "35.179.85.46",
            "subnet_id": "subnet-0db903fba2a8fe26d",
            "tags": {
              "Name": "VOLUME-MOUNT-TEST-AZ2",
              "application": "volume-mount-test"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nateip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0528a669e99ad116a",
            "id": "nat-05d2b7ac04ec51218",
            "network_interface_id": "eni-05c6d4b9f19404bc0",
            "private_ip": "10.0.2.87",
            "public_ip": "3.9.137.113",
            "subnet_id": "subnet-0840b01772f93965c",
            "tags": {
              "Name": "VOLUME-MOUNT-TEST-AZ3",
              "application": "volume-mount-test"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nateip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "networkaclprivatea",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-01360361185bfe711",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "626298535712",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0d3994eded865fe56"
            ],
            "tags": {
              "Name": "volume-mount-test-NetworkAcl-Private-subnet-0d3994eded865fe56",
              "application": "volume-mount-test"
            },
            "vpc_id": "vpc-0ca2a1fffca7c4321"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "networkaclprivateb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0222fcc127e121ebc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "626298535712",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0442670e404403389"
            ],
            "tags": {
              "Name": "volume-mount-test-NetworkAcl-Private-subnet-0442670e404403389",
              "application": "volume-mount-test"
            },
            "vpc_id": "vpc-0ca2a1fffca7c4321"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "networkaclprivatec",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0bfad3a400a6c0dba",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "626298535712",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-04195ce238c33b7d5"
            ],
            "tags": {
              "Name": "volume-mount-test-NetworkAcl-Private-subnet-04195ce238c33b7d5",
              "application": "volume-mount-test"
            },
            "vpc_id": "vpc-0ca2a1fffca7c4321"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "networkaclpublic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0705ebe5d1d23451b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "626298535712",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-008fd7e5aa3735cc9",
              "subnet-0840b01772f93965c",
              "subnet-0db903fba2a8fe26d"
            ],
            "tags": {
              "Name": "volume-mount-test-NetworkAcl-Public",
              "application": "volume-mount-test"
            },
            "vpc_id": "vpc-0ca2a1fffca7c4321"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "privatea",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06b3d8d3fffc8935e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0b10b069494ecfd4b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06b3d8d3fffc8935e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nateip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.natgateway",
            "module.vpc.aws_route_table.privatea",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpn_gateway.vpn_gw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "privateb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01c89e37b2dabab091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-00920f8c8bdb0085c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01c89e37b2dabab09",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nateip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.natgateway",
            "module.vpc.aws_route_table.privateb",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpn_gateway.vpn_gw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "privatec",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08adf14d83e4041de1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-05d2b7ac04ec51218",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08adf14d83e4041de",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nateip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.natgateway",
            "module.vpc.aws_route_table.privatec",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpn_gateway.vpn_gw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ba57caf6056abf07",
            "id": "r-rtb-0500a0207abd512181080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0500a0207abd51218",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privatea",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06b3d8d3fffc8935e",
            "owner_id": "626298535712",
            "propagating_vgws": [
              "vgw-0ff16621055ff05a4"
            ],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0b10b069494ecfd4b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "volume-mount-test-Private-subnet-0d3994eded865fe56",
              "application": "volume-mount-test"
            },
            "vpc_id": "vpc-0ca2a1fffca7c4321"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpn_gateway.vpn_gw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01c89e37b2dabab09",
            "owner_id": "626298535712",
            "propagating_vgws": [
              "vgw-0ff16621055ff05a4"
            ],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-00920f8c8bdb0085c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "volume-mount-test-Private-subnet-0442670e404403389",
              "application": "volume-mount-test"
            },
            "vpc_id": "vpc-0ca2a1fffca7c4321"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpn_gateway.vpn_gw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privatec",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08adf14d83e4041de",
            "owner_id": "626298535712",
            "propagating_vgws": [
              "vgw-0ff16621055ff05a4"
            ],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-05d2b7ac04ec51218",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "volume-mount-test-Private-subnet-04195ce238c33b7d5",
              "application": "volume-mount-test"
            },
            "vpc_id": "vpc-0ca2a1fffca7c4321"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpn_gateway.vpn_gw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0500a0207abd51218",
            "owner_id": "626298535712",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba57caf6056abf07",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VOLUME-MOUNT-TEST-Public",
              "application": "volume-mount-test"
            },
            "vpc_id": "vpc-0ca2a1fffca7c4321"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privatea",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035c049f4e492bc1f",
            "route_table_id": "rtb-06b3d8d3fffc8935e",
            "subnet_id": "subnet-0d3994eded865fe56"
          },
          "dependencies": [
            "module.vpc.aws_route_table.privatea",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpn_gateway.vpn_gw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002710233732df5b1",
            "route_table_id": "rtb-01c89e37b2dabab09",
            "subnet_id": "subnet-0442670e404403389"
          },
          "dependencies": [
            "module.vpc.aws_route_table.privateb",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpn_gateway.vpn_gw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privatec",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f804840f7ca7511",
            "route_table_id": "rtb-08adf14d83e4041de",
            "subnet_id": "subnet-04195ce238c33b7d5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.privatec",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpn_gateway.vpn_gw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa64be49865c17ad",
            "route_table_id": "rtb-0500a0207abd51218",
            "subnet_id": "subnet-008fd7e5aa3735cc9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0041f688aa4dd092c",
            "route_table_id": "rtb-0500a0207abd51218",
            "subnet_id": "subnet-0db903fba2a8fe26d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075903be6c0f87e3b",
            "route_table_id": "rtb-0500a0207abd51218",
            "subnet_id": "subnet-0840b01772f93965c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "volume-mount-test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:626298535712:security-group/sg-07b9f2237c99ecedd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b9f2237c99ecedd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "volume-mount-test",
            "name_prefix": null,
            "owner_id": "626298535712",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ca2a1fffca7c4321"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "volume-mount-test-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4026178109",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07b9f2237c99ecedd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.volume-mount-test",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "volume-mount-test-ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4060216253",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07b9f2237c99ecedd",
            "self": false,
            "source_security_group_id": "sg-07b9f2237c99ecedd",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.volume-mount-test",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "volume-mount-test-ingress-all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3666187743",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07b9f2237c99ecedd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.volume-mount-test",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:626298535712:subnet/subnet-0d3994eded865fe56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0d3994eded865fe56",
            "map_public_ip_on_launch": false,
            "owner_id": "626298535712",
            "tags": {
              "Name": "VOLUME-MOUNT-TEST-Private-A",
              "Type": "Private",
              "application": "volume-mount-test"
            },
            "vpc_id": "vpc-0ca2a1fffca7c4321"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:626298535712:subnet/subnet-0442670e404403389",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0442670e404403389",
            "map_public_ip_on_launch": false,
            "owner_id": "626298535712",
            "tags": {
              "Name": "VOLUME-MOUNT-TEST-Private-B",
              "Type": "Private",
              "application": "volume-mount-test"
            },
            "vpc_id": "vpc-0ca2a1fffca7c4321"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:626298535712:subnet/subnet-04195ce238c33b7d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-04195ce238c33b7d5",
            "map_public_ip_on_launch": false,
            "owner_id": "626298535712",
            "tags": {
              "Name": "VOLUME-MOUNT-TEST-Private-C",
              "Type": "Private",
              "application": "volume-mount-test"
            },
            "vpc_id": "vpc-0ca2a1fffca7c4321"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:626298535712:subnet/subnet-008fd7e5aa3735cc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-008fd7e5aa3735cc9",
            "map_public_ip_on_launch": false,
            "owner_id": "626298535712",
            "tags": {
              "Name": "VOLUME-MOUNT-TEST-Public-A",
              "Type": "Public",
              "application": "volume-mount-test"
            },
            "vpc_id": "vpc-0ca2a1fffca7c4321"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:626298535712:subnet/subnet-0db903fba2a8fe26d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0db903fba2a8fe26d",
            "map_public_ip_on_launch": false,
            "owner_id": "626298535712",
            "tags": {
              "Name": "VOLUME-MOUNT-TEST-Public-B",
              "Type": "Public",
              "application": "volume-mount-test"
            },
            "vpc_id": "vpc-0ca2a1fffca7c4321"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:626298535712:subnet/subnet-0840b01772f93965c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0840b01772f93965c",
            "map_public_ip_on_launch": false,
            "owner_id": "626298535712",
            "tags": {
              "Name": "VOLUME-MOUNT-TEST-Public-C",
              "Type": "Public",
              "application": "volume-mount-test"
            },
            "vpc_id": "vpc-0ca2a1fffca7c4321"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:626298535712:vpc/vpc-0ca2a1fffca7c4321",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/21",
            "default_network_acl_id": "acl-0953ad8ca06b3aeb0",
            "default_route_table_id": "rtb-09d6c25dfdcade688",
            "default_security_group_id": "sg-050bcbdf9823a7c62",
            "dhcp_options_id": "dopt-f642ac9f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ca2a1fffca7c4321",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09d6c25dfdcade688",
            "owner_id": "626298535712",
            "tags": {
              "Name": "VOLUME-MOUNT-TEST",
              "application": "volume-mount-test"
            }
          }
        }
      ]
    }
  ]
}